--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 				content="Restless Universe, restless universe, RESTLESS UNIVERSE, Space Invaders, space invaders, SPACE INVADERS">
 	<link rel="stylesheet"
 				type="text/css"
-				href="../css/style.css">
+				href="./style/style.css">
 	<link rel="shortcut icon"
-				href="../img/backgroundMenu.png"
+				href="./img/backgroundMenu.png"
 				type="image/png">
 	<title>Restless Universe</title>
 </head>
@@ -21,7 +21,7 @@
 <body class="body-menu">
 	<header class="header-menu">
 		<img class="img-menu"
-				 src="img/backgroundMenu.png"
+				 src="./img/backgroundMenu.png"
 				 alt="Vaisseau capital dans l'univers en fond d'écran">
 		<h1>Restless Universe</h1>
 		<p>Bienvenue sur un classique des jeux d'arcade des années 1980</p>
@@ -36,7 +36,7 @@
 			</ul>
 		</div>
 		<nav>
-			<a href="html/game.html"
+			<a href="./pages/game.html"
 				 type="button"
 				 class="link-game">JOUER</a>
 		</nav>
