--- a/pages/game.html
+++ b/pages/game.html
@@ -9,7 +9,7 @@
 				content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet"
 				type="text/css"
-				href="../css/style.css">
+				href="../style/style.css">
 	<link rel="shortcut icon"
 				href="../img/backgroundMenu.png"
 				type="image/png">
